--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -12,15 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import your libraries\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import re\n",
-    "import datetime"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +231,7 @@
        "4    4.4 and up  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +265,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +437,7 @@
        "4    4.4 and up  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +760,7 @@
        "[10841 rows x 14 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +800,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +897,7 @@
        "10472       1.0.19  4.0 and up         NaN              NaN            True  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +933,7 @@
        "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +971,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1107,7 @@
        "10472       1.0.19  4.0 and up         NaN              NaN            True  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1150,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1236,7 @@
        "       '619k'], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1280,7 @@
        "Name: count, Length: 462, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1301,7 @@
        "0.15635089013928605"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1612,7 @@
        "[10841 rows x 14 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1659,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1691,7 @@
        "0.13596531685268887"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1732,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2019,7 @@
        "[9367 rows x 14 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2043,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2066,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2089,7 +2087,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2126,7 @@
        "       '$1.97', '$2.56', 'Everyone', '$1.20'], dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2151,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2181,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2211,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2244,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +2531,7 @@
        "[9367 rows x 14 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2545,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2568,7 +2566,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2593,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2612,7 +2610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2704,7 +2702,7 @@
        "4  Positive                1.00                0.300000  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2738,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2755,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2774,7 @@
        "Name: count, Length: 865, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2812,7 +2810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2833,7 +2831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2852,7 +2850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2861,7 +2859,7 @@
        "23998"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
